--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "tsc",
     "start": "node .",
     "dev": "ts-node src/index.ts",
+    "ts-node": "ts-node",
     "watch": "tsc -w",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
